# fountain-p11

./: .gitignore  CMakeLists.txt  main.cpp  normal.cpp
0000/: Depth0001.exr
0001/: Depth0001.exr
0002/: Depth0001.exr
0003/: Depth0001.exr
0004/: Depth0001.exr
0006/: Depth0001.exr
0007/: Depth0001.exr
0008/: Depth0001.exr
0009/: Depth0001.exr
0010/: Depth0001.exr
